@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-08-07T16:00:35Z",
+  "timestamp" : "2022-08-10T00:27:32Z",
   "count_outdated" : 41,
   "uniques_outdated" : 35,
-  "count" : 42,
-  "uniques" : 36,
+  "count" : 43,
+  "uniques" : 37,
   "clones" : [
     {
       "timestamp": "2022-08-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
